test/src/e2e_vm_tests/test_programs/should_fail/array_bad_index/src/main.sw
script;

fn main() -> u64 {
    let ary = [0, 1, 2, 3];
    ary[false]
}
